--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -1,5 +1,5 @@
 namespace: auto-refresh-entitlement
-system_uuid: 431bc9e6-8507-4737-a6f6-a996899d2e64 
+system_uuid: XXXXXXXXXXXXXXXXXXXXXX 
 container_image_name: ocp4-auto-refresh-entitlement
 build_config_name: ocp4-auto-refresh-entitlement
 deployment_name: ocp4-auto-refresh-entitlement
