--- a/undeploy.yaml
+++ b/undeploy.yaml
@@ -1,19 +1,20 @@
 ---
-- hosts: localhost 
+- hosts: localhost
+  gather_facts: false
   collections: 
     - community.kubernetes
     - community.general
   tasks:
-    - name: Create the namespace if it doesn't already exist
+    - name: Delete the namespace 
       k8s:
         template: project.j2
         state: absent
         wait: true
-    - name: Create machineconfig editor role
+    - name: Delete the machineconfig editor role
       k8s:
         template: clusterrole.j2
         state: absent
-    - name: Create the rolebinding 
+    - name: Delete the rolebinding 
       k8s:
         template: clusterrolebinding.j2
         state: absent
